# opengl-fluid-simulation

./: .gitignore  CMakeLists.txt  PROGRESS_LOG.md  README.md
assets/shaders/: fragment.frag  vertex.vert
assets/shaders/particle/: fragment.frag  vertex.vert
include/: parameters.h
include/fluid/: container.h  fluid.h  physics.h
include/glad/: glad.h
include/shader/: base.h  buffer.h  compute.h  shader.h
include/utils/: macros.h
src/: glad.c  main.cpp  shader.cpp
src/fluid/: fluid.cpp  physics.cpp
src/shader/: base.cpp  compute.cpp  shader.cpp
tests/paralellization/: README.md  hello_world.cpp  sysinfo.cpp
tests/paralellization/array/: parallel.cpp  sequential.cpp
tests/paralellization/density_calculation/: parallel.cpp  position_generator.cpp  positions.txt  sequential.cpp
tests/vertex_array/: indices_array_pattern.cpp
